2012-12-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add more protection against NULL pointer abuse.

	* src/pkgbase.h (pkgActionItem::Reset): Method renamed to...
	* src/guixmld.cpp (pkgActionItem::Assert): ...this; also renamed here.
	(AppWindowMaker::OnCommand): When calling...
	(pkgListViewMaker::MarkScheduledActions): ...this, pass argument as...
	(pkgXmlDocument::ClearScheduledActions): ...pointer returned by this.

	* src/pkgdata.cpp (AppWindowMaker::MarkSchedule):
	[pending_actions == NULL]: Do not propagate invocation request to...
	(pkgListViewMaker::MarkScheduledActions): ...this.

	* src/pkglist.cpp (pkgListViewMaker::MarkScheduledActions):
	[schedule == NULL]: Do nothing.

2012-12-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement some additional permanent debugging support.

	* src/pkgdeps.cpp (pkgXmlDocument::ResolveDependencies):
	[DEBUG_TRACE_DEPENDENCIES]: Enable DMH digest mode for messages.

	* src/tarproc.cpp (pkgTarArchiveInstaller::ProcessDataStream):
	[DEBUG_TRACE_TRANSACTIONS]: Add logging of installed file path names.

2012-12-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Insert a missing snprintf format effector.

	* src/pkgnget.cpp (pkgDownloadMeterGUI::Update): Add omitted '%'
	format specifier, in "%%", for formatting percentage-complete value.
	Rename "size_buf" automatic variable as "buf"; this results in shorter
	source lines, and consequently a tidier source code layout.
	(pkgDownloadMeterGUI::ResetGUI): Likewise s/size_buf/buf/

2012-12-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add a missing header reference.

	* src/approot.h: Include stdint.h; this ensures that wchar_t is
	properly typedef'd, before attempting to use it.

2012-12-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make a clone of the package menu available as a pop-up.

	* src/guimain.h (AppWindowMaker::SelectPackageAction): New private
	method; declare it.
